---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/show/code-show-closure.typ
---
#let project(
  title: "",
) = {
  show heading: it => box(width: 100%)[
    #v(0.50em)
    #set text(font: heading-font)
    #if it.numbering != none {
      counter(heading).display()
    }
    #h(0.75em)
    #it.body
  ]
}
